--- a/INLABMA/inst/not_a_vignette/spatial_inla.Rnw
+++ b/INLABMA/inst/not_a_vignette/spatial_inla.Rnw
@@ -138,11 +138,11 @@ be required.
 Alternatively, the posterior distributions of the parameters may be
 approximated in some way. However, most models are highly multivariate and
 approximating the full posterior distribution may not be possible in practice.
-The Integrated Nested Laplace Approximation \citep[][INLA]{isi:000264374200002} focuses on
-the posterior marginals for latent Gaussian models. Although these models may seem
-a rather restricted, they appear in a fair number of fields. 
-This also means that INLA will be particularly useful when only
-marginal inference on the model parameters is needed.
+The Integrated Nested Laplace Approximation \citep[][INLA]{isi:000264374200002}
+focuses on the posterior marginals for latent Gaussian models. Although these
+models may seem rather restricted, they appear in a fair number of fields.
+This also means that INLA will be particularly useful when only marginal
+inference on the model parameters is needed.
 
 The \pkg{R-INLA} package \citep{rinla:2013} for the \proglang{R} programming
 language provides an interface to INLA (a free-standing programme) so that models can be fitted using
@@ -207,8 +207,9 @@ integrating out over the remaining set of parameters $\mathbf{x}_{-i}$.
 
 Let us assume that we have a set of $n$ observations 
 $\mathbf{y}=\{y_i\}_ {i=1}^n$, whose distribution is of the Exponential family.
-The mean of observation $i$ is $\mu_i$, which is modelled using a linear
-predictor $\eta_i$ as follows:
+The mean of observation $i$ is $\mu_i$ and it can depend on a linear predictor 
+$\eta_i$ via a link function. In turn, the linear
+predictor $\eta_i$ can be modelled as follows:
 
 \begin{equation}
 \eta_i=\alpha+\sum_{j=1}^{n_f} f^{(j)}(u_{ji})+\sum_{k=1}^{n_{\beta}}\beta_k z_{ki}+\varepsilon_i
@@ -238,19 +239,16 @@ of $\mathbf{x}$ being a GMRF.
 Following \citet{isi:000264374200002}, the posterior distribution of the model
 latent effects $\mathbf{x}$ and hyperparameters $\theta$ can be written as 
 
-\begin{equation}
+\begin{eqnarray}
 \pi(\mathbf{x}, \mathbf{\theta}|\mathbf{y}) \propto
 \pi(\mathbf{\theta}) \pi(\mathbf{x}|\mathbf{\theta})\prod_{i\in \mathcal{I}}\pi(y_i|x_i,\mathbf{\theta})
-\propto 
-\end{equation}
-
-\begin{equation}
-\pi(\mathbf{\theta}) |\mathbf{Q}(\mathbf{\theta})|^{n/2} \exp\{-\frac{1}{2}\mathbf{x}^T \mathbf{Q}(\mathbf{\theta}) \mathbf{x}+\sum_{i\in\mathcal{I}} \log(\pi(y_i|x_i, \mathbf{\theta}) \}
-\end{equation}
+\propto  \\ \nonumber
+\pi(\mathbf{\theta}) |\mathbf{Q}(\mathbf{\theta})|^{1/2} \exp\{-\frac{1}{2}\mathbf{x}^T \mathbf{Q}(\mathbf{\theta}) \mathbf{x}+\sum_{i\in\mathcal{I}} \log(\pi(y_i|x_i, \mathbf{\theta})) \}
+\end{eqnarray}
 \noindent
 $\mathcal{I}$ represents an index of observed data (from 1 to $n$),
-$\mathbf{Q}(\mathbf{\theta})$ is a variance-covariance matrix on some
-hyperparameters $\theta$ and $\log(\pi(y_i|x_i, \mathbf{\theta}) \}$ is
+$\mathbf{Q}(\mathbf{\theta})$ is a precision matrix on some
+hyperparameters $\theta$ and $\log(\pi(y_i|x_i, \mathbf{\theta}))$ is
 the log-likelihood of observation $y_i$.
 
 INLA allows different forms for the likelihood of the observations.  This
@@ -273,13 +271,13 @@ and $\mathbf{\theta}$ (i.e., latent effects and hyper-parameters) as
 %VIRGILIO: I have changed this to "the marginals of the elements". FIXED.
 
 \begin{equation}
-\pi(x_i|\mathbf{y}) \propto \int \pi(x_i|\mathbf{\theta}, \mathbf{y})  \pi(\mathbf{\theta}| \mathbf{y}) d\mathbf{\theta}
+\pi(x_i|\mathbf{y}) = \int \pi(x_i|\mathbf{\theta}, \mathbf{y})  \pi(\mathbf{\theta}| \mathbf{y}) d\mathbf{\theta}
 \end{equation}
 \noindent
 and
 
 \begin{equation}
-\pi(\theta_j|\mathbf{y}) \propto \int \pi(\mathbf{\theta}| \mathbf{y})  d\mathbf{\theta}_{-j} 
+\pi(\theta_j|\mathbf{y}) = \int \pi(\mathbf{\theta}| \mathbf{y})  d\mathbf{\theta}_{-j} 
 \end{equation}
 
 In order to estimate the previous marginals, we need 
@@ -305,8 +303,9 @@ to compute the marginal distribution of $x_i$ using numerical integration:
 \tilde\pi(\mathbf{\theta}_k|\mathbf{y})\times \Delta_k
 \end{equation}
 \noindent
-Here $\Delta_k$ are the weights associated with vector of values
-$\mathbf{\theta}_k$ in a grid for vector of hyperparameters .
+Here $\Delta_k$ are the weights associated with the ensemble of values
+$\mathbf{\theta}_k$, defined on a multidimentional grid over
+the space of hyperparameters.
 
 %\citet{isi:000264374200002}  also discuss how the approximation $\tilde\pi
 %(x_i|\mathbf{\theta}_k, \mathbf{y})$ should be in order to reduce numerical
@@ -620,7 +619,9 @@ form <- log(CMEDV) ~ CRIM + ZN + INDUS + CHAS + I(NOX^2) + I(RM^2) +
 AGE + log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT)+
 f(idx, model = "besag", graph = adj )
 
-m1 <- inla(form, data = as.data.frame(boston),
+bdf<-as.data.frame(boston)
+
+m1 <- inla(form, data = bdf,
    control.predictor = list(compute = TRUE))
 @
 
@@ -634,6 +635,12 @@ fitted values.
 A summary of the model can be obtained as
 follows:
 
+<<eval=FALSE, echo=FALSE>>=
+#This will the call to INLA to be split in several lines according to
+#options()$width and fit in the page
+m1$call<-strwrap(m1$call)
+@
+
 <<>>=
 summary(m1)
 @
@@ -646,9 +653,9 @@ Laplace approximation to the marginal posterior densities. This provides
 information about the accuracy of the Gaussian approximation. 
 
 The marginal likelihood of the model is also reported and it is computed by
-integrating all the model parameters out. Hence, it is not the {\em
-predictive} marginal likelihood and it can be to perform model selection, for
-example.  The effictive number of parameters, as defined in
+integrating all the model parameters out. Hence, it is not the {\em predictive}
+marginal likelihood and it can be used to perform model selection, for example.
+The effictive number of parameters, as defined in
 \citet{Spiegelhalteretal:2002}, and the associated number of equivalent
 replicates. See \citet{isi:000284021400008} for more details on the
 \pkg{R-INLA} output.
@@ -821,8 +828,8 @@ ncol <- 10
 n <- nrow * ncol
 
 grd <- GridTopology(
-   cellcentre.offset = c(0, 0),
-   cellsize = c(1 / 9, 1 / 9), cells.dim = c(nrow, ncol)
+   cellcentre.offset = c(0.05, 0.05),
+   cellsize = c(1 / nrow, 1 / ncol), cells.dim = c(nrow, ncol)
 )
 @
 
@@ -1500,7 +1507,7 @@ different values of $\rho$.
 
 
 <<>>=
-bmaleroux <- BMA2(lerouxmodels, rlambda, 0, impacts=FALSE)
+bmaleroux <- INLABMA(lerouxmodels, rlambda, 0, impacts=FALSE)
 @
 <<echo=FALSE, eval=FALSE>>=
 #Using the same prior as in R-INLA:logit(beta) ~ Normal
@@ -1707,7 +1714,7 @@ term.
 
 
 The adjacency matrix $W$ is often taken to be row-standardised \citep[see, for
-example,][]{Haining:2003} to ensure that $\rho$ in the interval $(-1, 1)$.
+example,][]{Haining:2003} to ensure that $\rho$ is in the interval $(-1, 1)$.
 Also, when $\rho$ is equal to zero there is no spatial dependence.
 
 This can be reformulated as
@@ -1915,7 +1922,7 @@ a uniform prior on $\rho$ and set the third argument in the following
 function to $\log(1)=0$. 
 
 <<>>=
-bmasem <- BMA2(semmodels, rrho1, 0 , impacts = FALSE)
+bmasem <- INLABMA(semmodels, rrho1, 0 , impacts = FALSE)
 @
 
 \code{bmasem} is similar to the object returned by \code{inla()} and it
@@ -1960,7 +1967,7 @@ save(file="slmmodels.RData", list=c("slmmodels"))
 @
 
 <<>>=
-bmaslm <- BMA2(slmmodels, rrho2, 0 , impacts = FALSE)
+bmaslm <- INLABMA(slmmodels, rrho2, 0 , impacts = FALSE)
 @
 
 In the case of the SDM, it is very helpful to compute $X$ and $WX$ beforehand
@@ -2002,7 +2009,7 @@ save(file="sdmmodels.RData", list=c("sdmmodels"))
 @
 
 <<>>=
-bmasdm <- BMA2(sdmmodels, rrho3, 0 , impacts = FALSE)
+bmasdm <- INLABMA(sdmmodels, rrho3, 0 , impacts = FALSE)
 @
 
 As we have seen in the previous examples, combining the different values 
