--- a/INLABMA/inst/not_a_vignette/spatial_inla.tex
+++ b/INLABMA/inst/not_a_vignette/spatial_inla.tex
@@ -24,7 +24,8 @@ Virgilio G\'omez-Rubio\\Universidad de\\ Castilla-La Mancha
 %        Second Author\\Plus Affiliation}
 }
 %\title{Extending the \pkg{R-INLA} Package for Spatial Statistics}
-\title{Some Spatial Statistical Extensions to \pkg{R-INLA}}
+%\title{Some Spatial Statistical Extensions to \pkg{R-INLA}}
+\title{Spatial Data Analysis with \pkg{R-INLA} with Some Extensions}
 
 %% for pretty printing and a nice hypersummary also set:
 \Plainauthor{Roger S. Bivand, Virgilio G\'omez-Rubio, H\r{a}vard Rue}
@@ -626,7 +627,7 @@ Call:
 
 Time used:
  Pre-processing    Running inla Post-processing           Total 
-         3.8354         11.6809          0.6209         16.1372 
+         3.5041         11.6868          0.6280         15.8188 
 
 Fixed effects:
                mean     sd 0.025quant 0.5quant 0.975quant    mode kld
@@ -1376,7 +1377,7 @@ function (formula, d, W, lambda, improve = TRUE, fhyper = NULL,
     res <- inla(formula, data = d, ...)
     if (improve) 
         res <- inla.rerun(res)
-    res$logdet <- as.numeric(determinant(Q)$modulus)
+    res$logdet <- as.numeric(Matrix::determinant(Q)$modulus)
     res$mlik <- res$mlik + res$logdet/2
     return(res)
 }
@@ -1425,9 +1426,11 @@ advantage of fitting these conditioned models compared with standard MCMC method
 
 \begin{Schunk}
 \begin{Sinput}
-R> rlambda <- seq(0.8, 0.99, length.out = 15)
-R> fhyper = list(prec = list(prior = "loggamma", 
-+     param = c(1,1), initial = log(1), fixed = FALSE))
+R> rlambda <- seq(0.8, 0.99, length.out = 30)
+R> fhyper <- list(prec = list(prior = "loggamma", 
++     param = c(.001,.001), initial = log(1), fixed = FALSE))
+R> errorhyper <- list(prec = list(prior = "loggamma",
++     param = c(.001,.001), initial = log(1), fixed = FALSE))
 R> form2 <- log(CMEDV) ~ CRIM + ZN + INDUS + CHAS + I(NOX^2) + I(RM^2) + 
 +      AGE + log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT)
 \end{Sinput}
@@ -1438,9 +1441,10 @@ R> form2 <- log(CMEDV) ~ CRIM + ZN + INDUS + CHAS + I(NOX^2) + I(RM^2) +
 R> lerouxmodels = mclapply(rlambda,
 +          function(lambda) {
 +                  leroux.inla(form2, d = as.data.frame(boston), 
-+  			W = boston.matB, lambda = lambda,
++  			W = bmspB, lambda = lambda,
 +                          fhyper = fhyper, improve=TRUE,
 +                          family = "gaussian",
++  			control.family = list(hyper=errorhyper),
 +                          control.predictor = list(compute = TRUE),
 +                          control.compute = list(dic = TRUE, cpo = TRUE),
 +                          control.inla = list(print.joint.hyper = TRUE)
@@ -1448,7 +1452,6 @@ R> lerouxmodels = mclapply(rlambda,
 +          })
 \end{Sinput}
 \end{Schunk}
-
 
 
 
@@ -1487,8 +1490,10 @@ R> library("CARBayes")
 \begin{Sinput}
 R> bostondf<-as.data.frame(boston)
 R> attach(bostondf)
-R> lcarbayes <-  gaussian.lerouxCAR (form2, W = as.matrix(bmspB), 
-+     burnin = 500,  n.sample = 2500, thin = 5)
+R> #lcarbayes <-  gaussian.lerouxCAR (form2, W = boston.matB,
+R> #   burnin = 500,  n.sample = 2500, thin = 5)
+R> lcarbayes <-  lerouxCAR.re (form2, W = boston.matB, family="gaussian",
++     burnin = 500,  n.sample = 2500, thin = 5, prior.rho=rlambda)
 R> detach(bostondf)
 R> rm(bostondf)
 \end{Sinput}
@@ -1513,28 +1518,28 @@ with MCMC. This may be due to the high correlation between these two parameters
 model.
 
 % latex table generated in R 3.1.0 by xtable 1.7-3 package
-% Tue Jun 24 17:30:48 2014
+% Wed Jul  2 03:15:20 2014
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
   \hline
  & Mean (INLA) & SD (INLA) & Mean (MCMC) & SD (MCMC) \\ 
   \hline
-(Intercept) & 3.8651 & 0.1849 & 3.8898 & 0.1546 \\ 
-  CRIM & -0.0073 & 0.0011 & -0.0076 & 0.0010 \\ 
+(Intercept) & 3.8059 & 0.1761 & 3.8412 & 0.1621 \\ 
+  CRIM & -0.0076 & 0.0011 & -0.0076 & 0.0010 \\ 
   ZN & 0.0003 & 0.0005 & 0.0002 & 0.0005 \\ 
-  INDUS & -0.0004 & 0.0025 & -0.0004 & 0.0027 \\ 
-  CHAS1 & -0.0219 & 0.0316 & -0.0181 & 0.0312 \\ 
-  I(NOX\verb|^|2) & -0.5122 & 0.1438 & -0.4966 & 0.1481 \\ 
-  I(RM\verb|^|2) & 0.0095 & 0.0011 & 0.0095 & 0.0010 \\ 
-  AGE & -0.0011 & 0.0005 & -0.0011 & 0.0005 \\ 
-  log(DIS) & -0.1885 & 0.0661 & -0.1930 & 0.0585 \\ 
-  log(RAD) & 0.0552 & 0.0212 & 0.0520 & 0.0218 \\ 
+  INDUS & -0.0006 & 0.0024 & -0.0007 & 0.0021 \\ 
+  CHAS1 & -0.0338 & 0.0302 & -0.0381 & 0.0293 \\ 
+  I(NOX\verb|^|2) & -0.4375 & 0.1412 & -0.4232 & 0.1278 \\ 
+  I(RM\verb|^|2) & 0.0099 & 0.0011 & 0.0097 & 0.0011 \\ 
+  AGE & -0.0011 & 0.0005 & -0.0011 & 0.0004 \\ 
+  log(DIS) & -0.1661 & 0.0615 & -0.1754 & 0.0597 \\ 
+  log(RAD) & 0.0506 & 0.0205 & 0.0476 & 0.0191 \\ 
   TAX & -0.0003 & 0.0001 & -0.0003 & 0.0001 \\ 
-  PTRATIO & -0.0155 & 0.0055 & -0.0158 & 0.0051 \\ 
-  B & 0.0005 & 0.0001 & 0.0006 & 0.0001 \\ 
-  log(LSTAT) & -0.2578 & 0.0231 & -0.2670 & 0.0235 \\ 
-  lambda & 0.9517 & 0.0409 & 0.9314 & 0.0427 \\ 
+  PTRATIO & -0.0164 & 0.0053 & -0.0173 & 0.0050 \\ 
+  B & 0.0006 & 0.0001 & 0.0006 & 0.0001 \\ 
+  log(LSTAT) & -0.2535 & 0.0227 & -0.2552 & 0.0213 \\ 
+  lambda & 0.9520 & 0.0315 & 0.9429 & 0.0327 \\ 
    \hline
 \end{tabular}
 \caption{Point estimates of fixed effects and $\lambda$ using INLA and MCMC.} 
